# -

./: CMakeLists.txt  README.md
PeyoQvorovProgram/: Button.h  PeioQvorovPrograma.cpp  QvorovMainFrame.cpp  QvorovMainFrame.h
x64/resources/: questions.docx
ПейоЯворовПрограма/: Button.h  PeioQvorovPrograma.cpp  QvorovMainFrame.cpp  QvorovMainFrame.h  ПейоЯворовПрограма.vcxproj  ПейоЯворовПрограма.vcxproj.filters
ПейоЯворовПрограма/resources/: questions.docx
